adicionando a url de conexão corretamente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url= mongodb://localhost/local
+server.port=8081
+
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.authentication-database=None
-define.url=http://localhost:8080/
+spring.data.mongodb.database=arquivo-processamento
